The first site was created in accordance with lesson 1.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,86 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>WeyUp</title>
 </head>
 
 <body>
-	<h1><b>Nyanta-dev.github.io</b></h1>
-	<h2><em>Veb-dev</em></h2>
+	<header>
+		<img src="img/logo.jpg" alt="Logo WayUp" width="110" height="35">
+	</header>
+
+	<section>
+		<h1><b>Вступоение H1</b></h1>
+
+		<div>
+			<p>
+				Это текст моего первого задания.
+			</p>
+
+			<p>
+				Не верится, но мне уже удается писати свой первый код на HTML.
+			</p>
+		</div>
+	</section>
+
+	<section>
+		<h2><b>Что дальше? H2</b></h2>
+
+		<p>
+			Дальше, я буду получать все больше опыта в разработке сайтов, чтобы достичь новых вершин!
+			<span>
+				<a href="http://google.com.ua" target="_blank" title="google.com.ua">
+					Прочитать больше в Google
+				</a>
+			</span>
+		</p>
+	</section>
+
+	<section>
+		<h2><b>Что я буду уметь? H2</b></h2>
+
+		<div>
+			<p>
+				Я смогу создавать вот твкие замечательные формы:
+			</p>
+
+			<form action="#">
+				<input type="text" name="Name" placeholder="Имя" required>
+				<input type="email" name="email" placeholder="E-mail" required>
+				<input type="tel" name="Phone" placeholder="Телефон" required>
+				<button type="submit">
+					Отправить форму
+				</button>
+			</form>
+		</div>
+
+		<div>
+			<p>
+				А также, я научусь создавать списки:
+			</p>
+
+			<ul>
+				<li>
+					С одним пунктом
+				</li>
+				<li>
+					С нескольими пунктими
+				</li>
+				<li>
+					И даже с тремя отдельными пунктами
+				</li>
+			</ul>
+		</div>
+	</section>
+
+	<footer>
+		<h2><b>Отличное начало! H2</b></h2>
+
+		<a href="https://wayup.in/cabinet/course10-19-wave/unit1/lesson1" target="_blank"
+			title="wayup.in/cabinet/course10-19-wave/unit1/lesson1">
+			Перейти на страницу первого занятия курса <br>
+		</a>
+	</footer>
 </body>
 
 </html>
