--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 		<div>
 			<p>
-				Я смогу создавать вот твкие замечательные формы:
+				Я смогу создавать вот такие замечательные формы:
 			</p>
 
 			<form action="#">
