--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="stylesheet" href="styles/style.css">
+
 	<title>WeyUp</title>
 </head>
 
@@ -13,13 +16,13 @@
 		<img src="img/logo.jpg" alt="Logo WayUp" width="140" height="45">
 		<h1><b>Вступоение H1</b></h1>
 
-		<div>
-			<p>
-				Это текст моего первого задания.
+		<div class="textHeader">
+			<p id="oneParagraph">
+				Это текст моего второго домашнего задания.
 			</p>
 
-			<p>
-				Не верится, но мне уже удается писати свой первый код на HTML.
+			<p id="twoParagraph">
+				Не верится, но мне уже удается писати свой <span>первый код на HTML.</span>
 			</p>
 		</div>
 	</header>
@@ -38,10 +41,10 @@
 	</section>
 
 	<section>
-		<h2><b>Что я буду уметь? H2</b></h2>
+		<h2 class="uniqueTitleSection"><b>Что я буду уметь? H2</b></h2>
 
 		<div>
-			<p>
+			<p class="uniqueTextSection">
 				Я смогу создавать вот такие замечательные формы:
 			</p>
 
@@ -60,7 +63,7 @@
 				А также, я научусь создавать списки:
 			</p>
 
-			<ul>
+			<ul class="listItem">
 				<li>
 					С одним пунктом
 				</li>
