A site created as close as possible to the modern one has been created.

--- a/index.html
+++ b/index.html
@@ -7,83 +7,94 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="stylesheet" href="styles/style.css">
+	<link rel="stylesheet"
+		href="https://fonts.google.com/share?selection.family=Montserrat:wght@700;900%7COpen%20Sans:wght@300">
+	<link rel="stylesheet"
+		href="https://fonts.google.com/share?selection.family=Montserrat:wght@700;900%7COpen%20Sans:wght@300">
 
 	<title>WeyUp</title>
 </head>
 
 <body>
-	<header>
-		<img src="img/logo.jpg" alt="Logo WayUp" width="140" height="45">
-		<h1><b>Вступоение H1</b></h1>
-
-		<div class="textHeader">
-			<p id="oneParagraph">
-				Это текст моего второго домашнего задания.
-			</p>
-
-			<p id="twoParagraph">
-				Не верится, но мне уже удается писати свой <span>первый код на HTML.</span>
-			</p>
+	<header class="header" id="center-parent-container">
+		<div class="container">
+			<img src="img/logo.png" alt="WeyUp" class="logo">
+			<div class="wrapper">
+				<div class="offer">
+					<h1 class="title">
+						С помощью верстки<br>
+						я создам ту жизнь, о которой <span>мечтаю!</span>
+					</h1>
+					<p class="intro">
+						Мои стремления + настойчивость позволят мне достичь чего угодно. Я не верю в это. Я знаю это на
+						100%. Меня не остановить!
+					</p>
+					<a href="#" class="button">
+						<b>Двигаться к мечте!</b>
+					</a>
+				</div>
+				<img src="img/deskTop.png" alt="travelImg" class="travel">
+			</div>
 		</div>
 	</header>
-
-	<section>
-		<h2><b>Что дальше? H2</b></h2>
-
-		<p>
-			Дальше, я буду получать все больше опыта в разработке сайтов, чтобы достичь новых вершин!
-			<span>
-				<a href="http://google.com.ua" target="_blank" title="google.com.ua">
-					Прочитать больше в Google
-				</a>
-			</span>
-		</p>
-	</section>
-
-	<section>
-		<h2 class="uniqueTitleSection"><b>Что я буду уметь? H2</b></h2>
-
-		<div>
-			<p class="uniqueTextSection">
-				Я смогу создавать вот такие замечательные формы:
-			</p>
-
-			<form action="#">
-				<input type="text" name="Name" placeholder="Имя" required>
-				<input type="email" name="email" placeholder="E-mail" required>
-				<input type="tel" name="Phone" placeholder="Телефон" required>
-				<button type="submit">
-					Отправить форму
-				</button>
-			</form>
-		</div>
-
-		<div>
-			<p>
-				А также, я научусь создавать списки:
-			</p>
-
-			<ul class="listItem">
-				<li>
-					С одним пунктом
-				</li>
-				<li>
-					С нескольими пунктими
-				</li>
-				<li>
-					И даже с тремя отдельными пунктами
-				</li>
-			</ul>
+	<section class="future" id="center-parent-container">
+		<div class="container" id="center-text">
+			<h2 class="section-title">
+				Что меня ждет впереди
+			</h2>
+			<div class="wrapper">
+				<div class="event-1">
+					<h3 class="event-title">
+						Свободное время
+					</h3>
+					<p id="event-text">
+						Мне нужно свободное время на семью и самое настоящее
+					</p>
+				</div>
+				<div class="event-2">
+					<h3 class="event-title">
+						Яркие путешествия
+					</h3>
+					<p id="event-text">
+						Работать откуда угодно - что может быть лучше?
+					</p>
+				</div>
+				<div class="event-3">
+					<h3 class="event-title">
+						Создание ценности
+					</h3>
+					<p id="event-text">
+						Нет ничего сильнее, чем жить не просто так, создавая ценность
+					</p>
+				</div>
+			</div>
 		</div>
 	</section>
-
-	<footer>
-		<h2><b>Отличное начало! H2</b></h2>
-
-		<a href="https://wayup.in/cabinet/course10-19-wave/unit1/lesson1" target="_blank"
-			title="wayup.in/cabinet/course10-19-wave/unit1/lesson1">
-			Перейти на страницу первого занятия курса <br>
-		</a>
+	<section class="order" id="center-parent-container">
+		<div class="container" id="center-text">
+			<h2 class="section-title">
+				Форма заказа билета в будущее
+			</h2>
+			<div class="wrapper">
+				<form action="#" class="form">
+					<input class="input" type="text" placeholder="Имя" name="name" class="input" required>
+					<input class="input" type="email" placeholder="E-mail" name="email" class="input" required>
+					<input class="input" type="tel" placeholder="Телефон" name="telephone" class="input" required>
+					<input class="input" type="text" placeholder="Куда я полечу в ближайшее время?" name="email" class="input"
+						required>
+					<button type="submit" class="button">
+						<b>Двигаться к мечте!</b>
+					</button>
+				</form>
+			</div>
+		</div>
+	</section>
+	<footer class="footer" id="center-parent-container">
+		<div class="container" id="center-text">
+			<p class="credits">
+				© Все мои мечты защищены моим трудолюбием
+			</p>
+		</div>
 	</footer>
 </body>
 
