Made markup edits

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 </head>
 
 <body>
-	<header class="header" id="center-parent-container">
+	<header class="header">
 		<div class="container">
 			<img src="img/logo.png" alt="WeyUp" class="logo">
 			<div class="wrapper">
 				<div class="offer">
 					<h1 class="title">
 						С помощью верстки<br>
-						я создам ту жизнь, о которой <span>мечтаю!</span>
+						я создам ту жизнь, о которой<br>
+						<span>мечтаю!</span>
 					</h1>
 					<p class="intro">
 						Мои стремления + настойчивость позволят мне достичь чего угодно. Я не верю в это. Я знаю это на
@@ -37,8 +38,8 @@
 			</div>
 		</div>
 	</header>
-	<section class="future" id="center-parent-container">
-		<div class="container" id="center-text">
+	<section class="future">
+		<div class="container">
 			<h2 class="section-title">
 				Что меня ждет впереди
 			</h2>
@@ -70,27 +71,25 @@
 			</div>
 		</div>
 	</section>
-	<section class="order" id="center-parent-container">
-		<div class="container" id="center-text">
+	<section class="order">
+		<div class="container">
 			<h2 class="section-title">
 				Форма заказа билета в будущее
 			</h2>
-			<div class="wrapper">
-				<form action="#" class="form">
-					<input class="input" type="text" placeholder="Имя" name="name" class="input" required>
-					<input class="input" type="email" placeholder="E-mail" name="email" class="input" required>
-					<input class="input" type="tel" placeholder="Телефон" name="telephone" class="input" required>
-					<input class="input" type="text" placeholder="Куда я полечу в ближайшее время?" name="email" class="input"
-						required>
-					<button type="submit" class="button">
-						<b>Двигаться к мечте!</b>
-					</button>
-				</form>
-			</div>
+			<form action="#" class="form">
+				<input class="input" type="text" placeholder="Имя" name="name" class="input" required>
+				<input class="input" type="email" placeholder="E-mail" name="email" class="input" required>
+				<input class="input" type="tel" placeholder="Телефон" name="telephone" class="input" required>
+				<input class="input" type="text" placeholder="Куда я полечу в ближайшее время?" name="email" class="input"
+					required>
+				<button type="submit" class="button">
+					<b>Двигаться к мечте!</b>
+				</button>
+			</form>
 		</div>
 	</section>
-	<footer class="footer" id="center-parent-container">
-		<div class="container" id="center-text">
+	<footer class="footer">
+		<div class="container">
 			<p class="credits">
 				© Все мои мечты защищены моим трудолюбием
 			</p>
