Added site adaptability.

--- a/index.html
+++ b/index.html
@@ -2,99 +2,94 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="styles/style.css">
-	<link rel="stylesheet"
-		href="https://fonts.google.com/share?selection.family=Montserrat:wght@700;900%7COpen%20Sans:wght@300">
-	<link rel="stylesheet"
-		href="https://fonts.google.com/share?selection.family=Montserrat:wght@700;900%7COpen%20Sans:wght@300">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://fonts.google.com/share?selection.family=Montserrat:wght@700;900%7COpen%20Sans:wght@300">
+    <link rel="stylesheet" href="https://fonts.google.com/share?selection.family=Montserrat:wght@700;900%7COpen%20Sans:wght@300">
 
-	<title>WeyUp</title>
+    <title>WeyUp</title>
 </head>
 
 <body>
-	<header class="header">
-		<div class="container">
-			<img src="img/logo.png" alt="WeyUp" class="logo">
-			<div class="wrapper">
-				<div class="offer">
-					<h1 class="title">
-						С помощью верстки<br>
-						я создам ту жизнь, о которой<br>
-						<span>мечтаю!</span>
-					</h1>
-					<p class="intro">
-						Мои стремления + настойчивость позволят мне достичь чего угодно. Я не верю в это. Я знаю это на
-						100%. Меня не остановить!
-					</p>
-					<a href="#" class="button">
-						<b>Двигаться к мечте!</b>
-					</a>
-				</div>
-				<img src="img/deskTop.png" alt="travelImg" class="travel">
-			</div>
-		</div>
-	</header>
-	<section class="future">
-		<div class="container">
-			<h2 class="section-title">
-				Что меня ждет впереди
-			</h2>
-			<div class="wrapper">
-				<div class="event-1">
-					<h3 class="event-title">
-						Свободное время
-					</h3>
-					<p id="event-text">
-						Мне нужно свободное время на семью и самое настоящее
-					</p>
-				</div>
-				<div class="event-2">
-					<h3 class="event-title">
-						Яркие путешествия
-					</h3>
-					<p id="event-text">
-						Работать откуда угодно - что может быть лучше?
-					</p>
-				</div>
-				<div class="event-3">
-					<h3 class="event-title">
-						Создание ценности
-					</h3>
-					<p id="event-text">
-						Нет ничего сильнее, чем жить не просто так, создавая ценность
-					</p>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="order">
-		<div class="container">
-			<h2 class="section-title">
-				Форма заказа билета в будущее
-			</h2>
-			<form action="#" class="form">
-				<input class="input" type="text" placeholder="Имя" name="name" class="input" required>
-				<input class="input" type="email" placeholder="E-mail" name="email" class="input" required>
-				<input class="input" type="tel" placeholder="Телефон" name="telephone" class="input" required>
-				<input class="input" type="text" placeholder="Куда я полечу в ближайшее время?" name="email" class="input"
-					required>
-				<button type="submit" class="button">
+    <header class="header">
+        <div class="container">
+            <img src="img/logo.png" alt="WeyUp" class="logo">
+            <div class="wrapper">
+                <div class="offer">
+                    <h1 class="title">
+                        С помощью верстки<br> я создам ту жизнь, о которой<br>
+                        <span>мечтаю!</span>
+                    </h1>
+                    <p class="intro">
+                        Мои стремления + настойчивость позволят мне достичь чего угодно. Я не верю в это. Я знаю это на 100%. Меня не остановить!
+                    </p>
+                    <a href="#" class="button">
+                        <b>Двигаться к мечте!</b>
+                    </a>
+                </div>
+                <img src="img/deskTop.png" alt="travelImg" class="travel">
+            </div>
+        </div>
+    </header>
+    <section class="future">
+        <div class="container">
+            <h2 class="section-title">
+                Что меня ждет впереди
+            </h2>
+            <div class="wrapper">
+                <div class="event-1">
+                    <h3 class="event-title">
+                        Свободное время
+                    </h3>
+                    <p id="event-text">
+                        Мне нужно свободное время на семью и самое настоящее
+                    </p>
+                </div>
+                <div class="event-2">
+                    <h3 class="event-title">
+                        Яркие путешествия
+                    </h3>
+                    <p id="event-text">
+                        Работать откуда угодно - что может быть лучше?
+                    </p>
+                </div>
+                <div class="event-3">
+                    <h3 class="event-title">
+                        Создание ценности
+                    </h3>
+                    <p id="event-text">
+                        Нет ничего сильнее, чем жить не просто так, создавая ценность
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="order">
+        <div class="container">
+            <h2 class="section-title">
+                Форма заказа билета в будущее
+            </h2>
+            <form action="#" class="form">
+                <input class="input" type="text" placeholder="Имя" name="name" class="input" required>
+                <input class="input" type="email" placeholder="E-mail" name="email" class="input" required>
+                <input class="input" type="tel" placeholder="Телефон" name="telephone" class="input" required>
+                <input class="input" type="text" placeholder="Куда я полечу в ближайшее время?" name="email" class="input" required>
+                <button type="submit" class="button">
 					<b>Двигаться к мечте!</b>
 				</button>
-			</form>
-		</div>
-	</section>
-	<footer class="footer">
-		<div class="container">
-			<p class="credits">
-				© Все мои мечты защищены моим трудолюбием
-			</p>
-		</div>
-	</footer>
+            </form>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <p class="credits">
+                © Все мои мечты защищены моим трудолюбием
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
