--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <input class="input" type="text" placeholder="Имя" name="name" class="input" required>
                 <input class="input" type="email" placeholder="E-mail" name="email" class="input" required>
                 <input class="input" type="tel" placeholder="Телефон" name="telephone" class="input" required>
-                <input class="input" type="text" placeholder="Куда я полечу в ближайшее время?" name="email" class="input" required>
+                <input class="input" type="text" placeholder="Куда я полечу в ближайшее время?" name="text" class="input" required>
                 <button type="submit" class="button">
 					<b>Двигаться к мечте!</b>
 				</button>
